# poe

./: .env.example  .gitignore  README.md
Changes/: CHANGES.md
POE-DB/: README.md
POE-DB/memory/: README.md
POE-DB/obsidian/: Home.md
POE-DB/obsidian/.obsidian/: app.json  core-plugins.json
POE-DB/obsidian/Analisi/: Index.md
POE-DB/obsidian/Diario/: Index.md
POE-DB/obsidian/OSINT/: Index.md
POE-DB/obsidian/Risorse/: Index.md
POE-Home/: README.md  VOICE-PIPELINE.md  chat_shim.py  gen_ack.py  home_v1.html  pyproject.toml  server.py
POE-Home/agents/: dual_output.py  general_agent.py  local_model.py  persona.py  router.py  tools.py
POE-Home/agents/modules/analisi/: module.yaml
POE-Home/agents/modules/diario/: module.yaml
POE-Home/agents/modules/osint/: module.yaml
POE-Home/tests/: test_chat_shim.py  test_dual_output.py  test_general_agent.py  test_local_model.py  test_router.py  test_tools.py
POE-Home/voices/poe/: ref.txt
POE-OSINT/: Dockerfile  README.md  STATUS.md  VERSION.md  docker-compose.yml  pyproject.toml  requirements.txt
POE-OSINT/app/: config_loader.py  deobfuscator.py  main.py  models.py  phone_normalizer.py  recognizer.py  scoring.py  storage.py
POE-OSINT/app/config/: confidence_vocabulary.yaml  osint_catalog.yaml  stoplist_person_name.yaml  suspicious_tlds.yaml  tld_list.yaml
POE-OSINT/app/enrichers/: __init__.py  base.py  ip_enricher.py  social_enricher.py  whois_enricher.py
POE-OSINT/app/extractors/: base.py  llm_extractor.py  regex_extractor.py  spacy_extractor.py
POE-OSINT/app/llm/: base.py  ollama_backend.py
POE-OSINT/app/llm/prompts/: extraction.yaml  synthesis.yaml
POE-OSINT/app/templates/: _history.html  _macros.html  base.html  cross_observation.html  detail.html  error.html  index.html  results.html
POE-OSINT/data/: poe.db
POE-OSINT/scripts/: refresh_tlds.py
POE-OSINT/static/: app.js  style.css
POE-OSINT/tests/: conftest.py  test_acceptance.py  test_config_loader.py  test_cross_observation.py  test_deobfuscator.py  test_enrichers.py  test_extractors.py  test_llm_backend.py  test_llm_extractor.py  test_new_entity_types.py  test_phone_normalizer.py  test_recognizer.py  test_scoring.py  test_spacy_stoplist.py  test_stoplist_loader.py  test_storage.py  test_synthesis_route.py  test_tld_list.py  test_v04_flags.py  test_v04_foundations.py  test_v04_new_types.py  test_v04_routes.py
POE-OSINT/tests/acceptance/: TC-01_phishing_email.yaml  TC-02_smishing_sms.yaml  TC-03_ioc_dump.yaml  TC-04_threat_intel_report.yaml  TC-05_prompt_injection.yaml  TC-06_self_osint.yaml  TC-07a_empty_input.yaml  TC-07b_prose_no_entities.yaml  TC-07c_quasi_entities.yaml  TC-EXAMPLE.yaml  runner.py
WIN_file/: prepare_arrow.py
docs/: PROJECT-BRIEF.md
