[project]
name = "poe-home"
version = "0.1.0"
description = "POE Home — interfaccia AI centrale + AGNO agent layer"
requires-python = ">=3.12"

dependencies = [
    "agno>=2.6.13",
    "ddgs>=9.14.4",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "mlx-audio>=0.4.3",
    "mlx-lm>=0.31.3",
    "openai>=2.41.1",
    "psutil>=7.2.2",
    "pyobjc-framework-corelocation>=12.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.49.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["."]
